refactor: candidates endpoint
