# documents/swagger.yaml
@@ -29,37 +29,6 @@ paths:
       tags:
       - "candidates"
       summary: "create candidate"
-      parameters:
-        - name: "extension"
-          in: "query"
-          description: "The type of extension"
-          required: true
-          type: "string"
-        - name: "candidate_id"
-          in: "query"
-          description: "ID of the candidate"
-          required: true
-          type: "string"
-      description: ""
-      operationId: "uploadFile"
-      consumes:
-      - "multipart/form-data"
-      produces:
-      - "application/json"
-      responses:
-        200:
-          $ref: "#/responses/Ok"
-        400:
-          $ref: '#/responses/BadRequest'
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
-  /candidates:
-    post:
-      tags:
-      - "candidates"
-      summary: "create candidate"
       description: ""
       operationId: "addCandidate"
       consumes:
@@ -84,7 +53,49 @@ paths:
       - petstore_auth:
         - "write:pets"
         - "read:pets"
-  /candidates/{candidateId}:
+    get:
+      tags:
+      - "candidates"
+      summary: "get candidates"
+      description: ""
+      operationId: "addCandidate"
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/json"
+      - "application/xml"
+      responses:
+        201:
+          $ref: '#/responses/OkArray'
+        400:
+          $ref: '#/responses/BadRequest'
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"      
+  /candidates/{candidate_id}:
+    post:
+      tags:
+      - "candidates"
+      summary: "generate candidate report"
+      parameters:
+        - name: "candidate_id"
+          in: "path"
+          description: "ID of the candidate"
+          required: true
+          type: "integer"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          $ref: "#/responses/OkGeneratedReport"
+        400:
+          $ref: '#/responses/BadRequest'
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"
     get:
       tags:
       - "candidates"
@@ -95,7 +106,7 @@ paths:
       - "application/json"
       - "application/xml"
       parameters:
-      - name: "candidateId"
+      - name: "candidate_id"
         in: "path"
         description: "ID of candidate to return"
         required: true
@@ -107,7 +118,52 @@ paths:
         404:
           $ref: "#/responses/NotFound"
       security:
-      - api_key: []
+      - api_key: []  
+      
+    patch:
+      tags:
+      - "candidates"
+      summary: "Find candidate by ID"
+      description: "Returns a single candidate"
+      operationId: "getCandidateById"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - name: "candidate_id"
+        in: "path"
+        description: "ID of candidate to return"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          $ref: "#/responses/Ok"
+        404:
+          $ref: "#/responses/NotFound"
+      security:
+      - api_key: []     
+    delete:
+      tags:
+      - "candidates"
+      summary: "delete candidate"
+      parameters:
+        - name: "candidate_id"
+          in: "path"
+          description: "ID of the candidate"
+          required: true
+          type: "integer"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          $ref: "#/responses/Success"
+        400:
+          $ref: '#/responses/BadRequest'
+      security:
+      - petstore_auth:
+        - "write:pets"
+        - "read:pets"      
 securityDefinitions:
   api_key:
     type: "apiKey"
@@ -135,9 +191,40 @@ definitions:
       status:
         type: "string"
       data:
-          $ref: '#/definitions/Candidate'        
+          $ref: '#/definitions/Candidate'     
+  
+  ApiResponseOkArray:
+    type: "object"
+    properties:
+      status:
+        type: "string"
+      data:
+        type: "array"
+        items:
+          $ref: '#/definitions/Candidate'     
           
   ApiResponseError:
+    type: "object"
+    properties:
+      status:
+        type: "string"
+      data:
+        type: "object"
+        properties:
+          message:
+            type: string
+            
+  ApiResponseGenerated:
+    type: "object"
+    properties:
+      status:
+        type: "string"
+      data:
+        type: "object"
+        properties:
+          path:
+            type: string
+  ApiResponseSuccess:
     type: "object"
     properties:
       status:
@@ -186,7 +273,16 @@ responses:
   Ok:
     description: "Ok"
     schema:
-      $ref: '#/definitions/ApiResponseOk'      
+      $ref: '#/definitions/ApiResponseOk'
+      
+  OkArray:
+    description: "Ok"
+    schema:
+      $ref: '#/definitions/ApiResponseOkArray'
+  Success:
+    description: "Success"
+    schema:
+      $ref: '#/definitions/ApiResponseSuccess'         
   BadRequest:
     description: "Bad Request"
     schema:
@@ -195,6 +291,11 @@ responses:
     description: "Not Found"
     schema:
       $ref: '#/definitions/ApiResponseError'
+  OkGeneratedReport:
+    description: "Generate candidate report"
+    schema:
+      $ref: '#/definitions/ApiResponseGenerated'
+  
   # Unauthorized:
   #   description: "Unauthorized"
   #   schema:
